<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/include_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login_register_text"
        android:textColor="@color/font_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <FrameLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_stroke_corner_25dp_grey"
        android:padding="@dimen/dp_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="10dp"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_people" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@null"
            android:hint="@string/login_phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="@dimen/text_middle_size" />

        <ImageView
            android:id="@+id/clear_phone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_cross"
            android:visibility="visible" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_stroke_corner_25dp_grey"
        android:orientation="horizontal"
        android:padding="@dimen/dp_4"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="10dp"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_lock" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@null"
            android:hint="@string/login_password_hint"
            android:maxLength="16"
            android:inputType="textPassword"
            android:textSize="@dimen/text_middle_size" />

        <CheckBox
            android:id="@+id/swich_pwd"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_checkbox_eye"
            android:button="@null"
            android:checked="false"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_eye_close" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_stroke_corner_25dp_grey"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_sms"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:padding="@dimen/dp_4"
            android:src="@drawable/login_ic_code" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:hint="@string/login_code_hint"
            android:textSize="@dimen/text_middle_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape_stroke_corner_25dp_main_full"
        android:gravity="center"
        android:text="@string/login_register_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="已有账号？立即登录！"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_sms"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_stroke_corner_25dp_green_full"
        android:gravity="center"
        android:text="@string/login_send_sms"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5" />


</androidx.constraintlayout.widget.ConstraintLayout>